Enhanced API with search functionality and updated frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,6 +67,14 @@
                                 <input type="checkbox" name="skills" value="teaching">
                                 <span>👩‍🏫 Teaching</span>
                             </label>
+                            <label class="skill-item">
+                                <input type="checkbox" name="skills" value="healthcare">
+                                <span>🏥 Healthcare</span>
+                            </label>
+                            <label class="skill-item">
+                                <input type="checkbox" name="skills" value="agriculture">
+                                <span>🌾 Agriculture</span>
+                            </label>
                         </div>
                     </div>
 
@@ -97,6 +105,10 @@
                             <label class="interest-item">
                                 <input type="checkbox" name="interests" value="agriculture">
                                 <span>🌾 Agriculture</span>
+                            </label>
+                            <label class="interest-item">
+                                <input type="checkbox" name="interests" value="retail">
+                                <span>🛍️ Retail</span>
                             </label>
                         </div>
                     </div>
